Добавление классовых вьюх

--- a/instagram/posts/templates/posts/index.html
+++ b/instagram/posts/templates/posts/index.html
@@ -14,9 +14,18 @@
                     {{post.name}}
                 </a>
             </h2>
+            {% if request.user.is_authenticated and request.user == post.author %}
+                <a href="{% url 'posts:post-update' post.pk %}">✏</a>
+                <a href="{% url 'posts:post-delete' post.pk %}">❌</a>
+            {% endif %}
             <p>{{post.author}}</p>
             <p>{{post.description}}</p>
             <p>Лайки: {{post.count_of_likes}}</p>
+            {% if request.user in post.likes.all %}
+                <a href="{% url 'posts:like' post.pk %}">💩</a>
+            {% else %}
+                <a href="{% url 'posts:like' post.pk %}">🧁</a>
+            {% endif %}
         </li>
         {% endfor %}
     </ul>
