--- a/instagram/users/templates/users/profile.html
+++ b/instagram/users/templates/users/profile.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{{header}}</title>
+    <link type="text/css" rel="stylesheet" href="{% static 'users/css/profile.css' %}">
 </head>
 <body>
     <h1>{{header}}</h1>
@@ -21,9 +24,9 @@
 
     <h2>Info:</h2>
     {% if profile.avatar %}
-        <img src="{{profile.avatar.url}}" alt="avatar">
+        <img class="avatar" src="{{profile.avatar.url}}" alt="avatar">
     {% else %}
-        <img style="width: 100px;" src="https://thinksport.com.au/wp-content/uploads/2020/01/avatar-.jpg" alt="avatar">
+        <img class="avatar" src="{% static 'users/images/avatar.jpg' %}" alt="avatar">
     {% endif %}
     <p>Username: {{ profile.username }}</p>
     <p>First name: {{ profile.first_name }}</p>
